--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://antoniovaz.github.io/react/rastreio-tarefas",
+  "homepage": "https://antoniosilvavaz.github.io/rastreio-tarefas/",
   "name": "rastreio-tarefas",
   "version": "0.1.0",
   "private": true,
