upated package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://antoniosilvavaz.github.io/rastreio-tarefas/",
+  "homepage": "http://task-tracker.antoniovazom.com/",
   "name": "rastreio-tarefas",
   "version": "0.1.0",
   "private": true,
